--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@formkit/vue": "^1.0.0-beta.11",
     "@highlightjs/vue-plugin": "^2.0.1",
     "@iconify/iconify": "^2.0.4",
+    "@tiptap/starter-kit": "^2.0.0-beta.209",
+    "@tiptap/vue-3": "^2.0.0-beta.209",
     "@vueup/vue-quill": "^1.0.0",
     "@vueuse/core": "^6.0.0",
     "axios": "^1.1.2",
